--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@lottiefiles/dotlottie-react": "^0.6.5",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-navigation/drawer": "^7.3.2",
+    "@react-navigation/drawer": "^7.3.8",
     "@supabase/supabase-js": "^2.49.3",
     "date-fns": "^4.1.0",
     "expo": "~52.0.42",
@@ -37,6 +37,7 @@
     "react-native": "^0.76.8",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.13.1",
     "react-native-permissions": "^5.3.0",
     "react-native-reanimated": "~3.16.1",
