--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "build:web": "npx expo export -p web",
     "deploy": "vercel"
@@ -13,7 +13,7 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.6.5",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "^7.7.0",
     "@react-navigation/drawer": "^7.3.8",
     "@supabase/supabase-js": "^2.49.3",
     "date-fns": "^4.1.0",
@@ -22,22 +22,28 @@
     "expo-camera": "~16.0.18",
     "expo-clipboard": "^7.0.1",
     "expo-constants": "~17.0.2",
+    "expo-dev-client": "~5.0.19",
     "expo-device": "^7.0.3",
     "expo-image-manipulator": "^13.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.2",
+    "expo-location": "^18.0.10",
     "expo-router": "^4.0.19",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.27.4",
     "jsqr": "^1.4.0",
     "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-native": "^0.76.8",
-    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-nfc-manager": "^3.16.1",
     "react-native-paper": "^5.13.1",
     "react-native-permissions": "^5.3.0",
     "react-native-reanimated": "~3.16.1",
@@ -47,13 +53,16 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.13.5",
     "sentry-expo": "~7.0.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-haptics": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
   },
   "private": true
