--- a/eas.json
+++ b/eas.json
@@ -30,6 +30,14 @@
       "ios": {
         "simulator": true
       }
+    },
+    "ios": {
+      "distribution": "internal"
+    },
+    "adhoc": {
+      "ios": {
+        "distribution": "internal"
+      }
     }
   },
   "submit": {
