--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.6.5",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^7.7.0",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/drawer": "^7.3.8",
     "@supabase/supabase-js": "^2.49.3",
     "date-fns": "^4.1.0",
@@ -24,6 +24,7 @@
     "expo-constants": "~17.0.2",
     "expo-dev-client": "~5.0.19",
     "expo-device": "^7.0.3",
+    "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "^13.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
@@ -55,8 +56,8 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.13.5",
     "sentry-expo": "~7.0.0",
-    "zustand": "^5.0.3",
-    "expo-haptics": "~14.0.1"
+    "swr": "^2.3.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
